; ModuleID = '/home/carl/AnghaBench/zfs/tests/zfs-tests/cmd/libzfs_input_check/extr_libzfs_input_check.c_test_vdev_initialize.c'
source_filename = "/home/carl/AnghaBench/zfs/tests/zfs-tests/cmd/libzfs_input_check/extr_libzfs_input_check.c_test_vdev_initialize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [5 x i8] c"path\00", align 1
@ZPOOL_INITIALIZE_COMMAND = common dso_local global i8* null, align 8
@POOL_INITIALIZE_START = common dso_local global i32 0, align 4
@ZPOOL_INITIALIZE_VDEVS = common dso_local global i32 0, align 4
@ZFS_IOC_POOL_INITIALIZE = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @test_vdev_initialize to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_vdev_initialize(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  store i8* %0, i8** %2, align 8
  %5 = call i32* (...) @fnvlist_alloc()
  store i32* %5, i32** %3, align 8
  %6 = call i32* (...) @fnvlist_alloc()
  store i32* %6, i32** %4, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = call i32 @fnvlist_add_uint64(i32* %7, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32 -559038737)
  %9 = load i32*, i32** %3, align 8
  %10 = load i8*, i8** @ZPOOL_INITIALIZE_COMMAND, align 8
  %11 = load i32, i32* @POOL_INITIALIZE_START, align 4
  %12 = call i32 @fnvlist_add_uint64(i32* %9, i8* %10, i32 %11)
  %13 = load i32*, i32** %3, align 8
  %14 = load i32, i32* @ZPOOL_INITIALIZE_VDEVS, align 4
  %15 = load i32*, i32** %4, align 8
  %16 = call i32 @fnvlist_add_nvlist(i32* %13, i32 %14, i32* %15)
  %17 = load i32, i32* @ZFS_IOC_POOL_INITIALIZE, align 4
  %18 = load i8*, i8** %2, align 8
  %19 = load i32*, i32** %3, align 8
  %20 = load i32, i32* @EINVAL, align 4
  %21 = call i32 @IOC_INPUT_TEST(i32 %17, i8* %18, i32* %19, i32* null, i32 %20)
  %22 = load i32*, i32** %4, align 8
  %23 = call i32 @nvlist_free(i32* %22)
  %24 = load i32*, i32** %3, align 8
  %25 = call i32 @nvlist_free(i32* %24)
  ret void
}

declare dso_local i32* @fnvlist_alloc(...) #1

declare dso_local i32 @fnvlist_add_uint64(i32*, i8*, i32) #1

declare dso_local i32 @fnvlist_add_nvlist(i32*, i32, i32*) #1

declare dso_local i32 @IOC_INPUT_TEST(i32, i8*, i32*, i32*, i32) #1

declare dso_local i32 @nvlist_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
